[gd_scene load_steps=2 format=3 uid="uid://d0tv4orjqx5m3"]

[ext_resource type="Script" path="res://scripts/demos/achievements_demo.gd" id="1_achievements"]

[node name="AchievementsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_achievements")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EpicOS Achievements Demo"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 24)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "‚Üê Back to Menu"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Status: Not Logged In (Achievements require authentication)"
add_theme_font_size_override("font_size", 16)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
text = "Achievement Actions"
add_theme_font_size_override("font_size", 18)

[node name="ActionsGrid" type="GridContainer" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
columns = 4

[node name="QueryDefinitionsButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Definitions"
disabled = true

[node name="QueryPlayerButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Player Achievements"
disabled = true

[node name="QueryStatsButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Achievement Stats"
disabled = true

[node name="RefreshButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Refresh Display"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UnlockSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UnlockLabel" type="Label" parent="VBoxContainer/UnlockSection"]
layout_mode = 2
text = "Unlock Achievements"
add_theme_font_size_override("font_size", 16)

[node name="UnlockContainer" type="HBoxContainer" parent="VBoxContainer/UnlockSection"]
layout_mode = 2

[node name="AchievementInput" type="LineEdit" parent="VBoxContainer/UnlockSection/UnlockContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Achievement ID"

[node name="UnlockButton" type="Button" parent="VBoxContainer/UnlockSection/UnlockContainer"]
layout_mode = 2
text = "Unlock Achievement"
disabled = true

[node name="UnlockAllButton" type="Button" parent="VBoxContainer/UnlockSection/UnlockContainer"]
layout_mode = 2
text = "Unlock All Test Achievements"
disabled = true

[node name="StatsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer/StatsSection"]
layout_mode = 2
text = "Achievement Stats"
add_theme_font_size_override("font_size", 16)

[node name="StatsContainer" type="HBoxContainer" parent="VBoxContainer/StatsSection"]
layout_mode = 2

[node name="StatNameInput" type="LineEdit" parent="VBoxContainer/StatsSection/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "Stat Name"

[node name="StatValueInput" type="SpinBox" parent="VBoxContainer/StatsSection/StatsContainer"]
layout_mode = 2
max_value = 999999.0
value = 1.0

[node name="IngestStatButton" type="Button" parent="VBoxContainer/StatsSection/StatsContainer"]
layout_mode = 2
text = "Ingest Stat"
disabled = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DataSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DefinitionsPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefinitionsContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/DefinitionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DefinitionsLabel" type="Label" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer"]
layout_mode = 2
text = "Achievement Definitions"
add_theme_font_size_override("font_size", 16)

[node name="DefinitionsScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DefinitionsList" type="ItemList" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer/DefinitionsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="PlayerLabel" type="Label" parent="VBoxContainer/DataSection/PlayerPanel/PlayerContainer"]
layout_mode = 2
text = "Player Achievements"
add_theme_font_size_override("font_size", 16)

[node name="PlayerScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/PlayerPanel/PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="ItemList" parent="VBoxContainer/DataSection/PlayerPanel/PlayerContainer/PlayerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsDataContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatsDataLabel" type="Label" parent="VBoxContainer/DataSection/StatsPanel/StatsDataContainer"]
layout_mode = 2
text = "Achievement Stats"
add_theme_font_size_override("font_size", 16)

[node name="StatsScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/StatsPanel/StatsDataContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsList" type="ItemList" parent="VBoxContainer/DataSection/StatsPanel/StatsDataContainer/StatsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer/OutputSection"]
layout_mode = 2
text = "Output Log"
add_theme_font_size_override("font_size", 16)

[node name="OutputScrollContainer" type="ScrollContainer" parent="VBoxContainer/OutputSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/OutputSection/OutputScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=green]Welcome to the EpicOS Achievements Demo![/color]

This demo shows how to:
1. Query achievement definitions from Epic Games
2. Query player's achievement progress
3. Unlock achievements
4. Manage achievement statistics

[color=yellow]Note: You must be logged in to use achievement features.[/color]
"
scroll_following = true